# cppnn-demo

./: .clang-format  CMakeLists.txt  README.md  data_structure.hpp  draw.html  layer.hpp  loss.hpp  mnist.cpp  mnist_data.hpp  mnist_model.hpp  utility.hpp
